
	* src/test/.gitignore:
	* src/test/Makefile.am: Updated accordingly.

	* Makefile.am:
	* configure.ac: configure in tools/.

2011-01-14 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/nautilus-actions-new.c:
	* src/utils/nautilus-actions-run.c:
	* src/utils/nautilus-actions-schemas.c: Add locale.h include.

2011-01-12 Pierre Wieser <pwieser@trychlos.org>

	* README-GCONF:
	* src/core/na-settings.c:
	* src/utils/na-gconf2key.sh.in: Add omitted 'export-ask-user-last-format' key.

	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-ienvironment-tab.c: Update to new preferences.

	* README-GCONF:
	* src/core/na-settings.c:
	* src/utils/na-gconf2key.sh.in:
	'folder-last-path' key is renamed as 'folder-last-folder-uri'.

	* src/nact/nact-ifolders-tab.c: Updated accordingly.

	* README-GCONF:
	* src/core/na-settings.c:
	* src/utils/na-gconf2key.sh.in: Add 'export-ask-user-wsp' preference.

	* src/nact/nact-add-capability-dialog.c (base_get_iprefs_window_id):
	* src/nact/nact-add-scheme-dialog.c (base_get_iprefs_window_id):
	* src/nact/nact-assistant-export.c (window_get_iprefs_window_id):
	* src/nact/nact-assistant-import.c (window_get_iprefs_window_id):
	* src/nact/nact-export-ask.c (base_get_iprefs_window_id):
	* src/nact/nact-main-window.c
	(instance_dispose, base_get_iprefs_window_id):
	* src/nact/nact-preferences-editor.c (base_get_iprefs_window_id):
	Update all preference names when saving/restoring window size and position.

	* src/core/na-settings.c:
	* src/core/na-settings.h: All getters/setters are implemented.

	* src/nact/base-iprefs.c: Remove GConf stuff.

	* src/nact/nact-icon-chooser.c:
	* src/nact/nact-icon-chooser.ui: Implement all preferences.

	* src/utils/na-gconf2key.sh.in:
	Renamed preferences for windows size and position '-wsp'.
	Also delete from GConf if only preferences have been migrated.
	Re-sync after tree delete.

	* src/api/na-boxed.h:
	* src/core/na-boxed.c
	(na_boxed_get_string, na_boxed_get_uint, na_boxed_get_uint_list):